--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -39,9 +39,41 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2023 - WebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+<footer class="border-top footer text-muted bg-dark">
+    <div class="container pt-5 pb-5 text-light">
+        <div class="row px-5">
+            <div class="col-sm-3">
+                <h2 class="mb-3">Curabitur</h2>
+
+                <h5 class="fw-light">Fmauris</h5>
+                <h5 class="fw-light">Kfringilla</h5>
+                <h5 class="fw-light">Oin magna sem</h5>
+                <h5 class="fw-light">Kelementum</h5>
+
+            </div>
+            <div class="col-sm-3">
+                <h2 class="mb-3">Fusce</h2>
+                <h5 class="fw-light">Econsectetur</h5>
+                <h5 class="fw-light">Ksollicitudin</h5>
+                <h5 class="fw-light">Omvulputate</h5>
+                <h5 class="fw-light">Nunc fringilla tellu</h5>
+            </div>
+            <div class="col-sm-3">
+                <h2 class="mb-3">Kontakt</h2>
+
+                <h5 class="">Peakontor: Tallinnas</h5>
+                <h5 class="fw-light">Väike - Ameerika 1, 11415 Tallinn</h5>
+                <h5 class="fw-light">Telefon: 605 4450</h5>
+                <h5 class="fw-light">Faks: 605 3186</h5>
+            </div>
+            <div class="col-sm-3">
+                <h2 class="mb-3" style="visibility:hidden;">Curabitur</h2>
+                <h5>Harukontor: Vörus</h5>
+                <h5 class="fw-light">Oia tn 7 (külastusaadress)</h5>
+                <h5 class="fw-light">Telefon: 605 3330</h5>
+                <h5 class="fw-light">Faks: 605 3155</h5>
+            </div>
+        </div>
     </div>
 </footer>
 
