--- a/WebApp/Pages/EventInfos/Create.cshtml
+++ b/WebApp/Pages/EventInfos/Create.cshtml
@@ -5,17 +5,16 @@
     ViewData["Title"] = "Create";
 }
 
-<div class="bg-white" style="height: calc(100vh - 150px)">
+<div class="bg-white" style="height: calc(100vh - 389px)">
     <div class="row" style="margin-right: 0; margin-left: 0;">
 
         <div class="col-md-3 bg-primary text-white d-flex align-items-center justify-content-center">
             <h1 class="text-center">Ürituse lisamine</h1>
         </div>
-
-
-        <div class="col-md-9 p-0" style="height: 100px; max-width: max-content; overflow: hidden;">
-            <img src="https://cdn.wallpapersafari.com/36/32/YpBq6m.jpg" alt="no img found">
-        </div>
+        
+        <div class="col-md-9 p-0" style="height: 100px; overflow: hidden; object-fit: cover;">
+                <img style="width: 150%; " src="~/images/libled.jpg" alt="no img found"/>
+            </div>
 
     </div>
 
@@ -24,13 +23,12 @@
         <br/>
         <h3 class="text-primary">Ürituse lisamine</h3>
         <br/>
-        <br/>
         <div class="row">
             <div class="col">
                 <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                    <div class="form-group row">
+                    <div class="form-group row mb-3">
                         <label for="EventName" class="col-sm-3 col-form-label">Ürituse nimi:</label>
                         <div class="col-sm-9">
                             <input asp-for="EventInfo.EventName" class="form-control" id="EventName">
@@ -38,24 +36,22 @@
                         </div>
                     </div>
 
-                    <br/>
-                    <div class="form-group row">
+                    
+                    <div class="form-group row mb-3">
                         <label asp-for="EventInfo.EventDateTime" class="col-sm-3 col-form-label">Toimumisaeg: </label>
                         <div class="col-sm-9">
                             <input asp-for="EventInfo.EventDateTime" min="@DateTime.Now.ToString("yyyy-MM-ddTHH:mm")" class="form-control"/>
                             <span asp-validation-for="EventInfo.EventDateTime" class="text-danger"></span>
                         </div>
                     </div>
-                    <br/>
 
-                    <div class="form-group row">
+                    <div class="form-group row mb-3">
                         <label asp-for="EventInfo.EventLocation" class="col-sm-3 col-form-label">Koht: </label>
                         <div class="col-sm-9">
                             <input asp-for="EventInfo.EventLocation" class="form-control"/>
                             <span asp-validation-for="EventInfo.EventLocation" class="text-danger"></span>
                         </div>
                     </div>
-                    <br/>
 
                     <div class="form-group row">
                         <label asp-for="EventInfo.EventDescription" class="col-sm-3 col-form-label">Lisainfo: </label>
