--- a/WebApp/Pages/EventInfos/Details.cshtml
+++ b/WebApp/Pages/EventInfos/Details.cshtml
@@ -15,8 +15,8 @@
     </div>
 
 
-    <div class="col-md-9 p-0" style="height: 100px; max-width: max-content; overflow: hidden;">
-        <img src="https://cdn.wallpapersafari.com/36/32/YpBq6m.jpg" alt="no img found"/>
+    <div class="col-md-9 p-0" style="height: 100px; overflow: hidden; object-fit: cover;">
+        <img style="width: 150%; " src="~/images/libled.jpg" alt="no img found"/>
     </div>
 
 </div>
