--- a/WebApp/Pages/Participators/Edit.cshtml
+++ b/WebApp/Pages/Participators/Edit.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<div class="bg-white">
+<div class="bg-white" style="height: calc(100vh - 389px)">
     <div class="row" style="margin-right: 0; margin-left: 0;">
 
         <div class="col-md-3 bg-primary text-white d-flex align-items-center justify-content-center">
@@ -15,17 +15,15 @@
         </div>
 
 
-        <div class="col-md-9 p-0" style="height: 100px; max-width: max-content; overflow: hidden;">
-            <img src="https://cdn.wallpapersafari.com/36/32/YpBq6m.jpg" alt="no img found">
-        </div>
+        <div class="col-md-9 p-0" style="height: 100px; overflow: hidden; object-fit: cover;">
+                <img style="width: 150%; " src="~/images/libled.jpg" alt="no img found"/>
+            </div>
 
     </div>
 
     <div class="w-50 align-content-center mx-auto">
         <br/>
-        <br/>
         <h3 class="text-primary">Osavõtja info</h3>
-        <br/>
         <br/>
         <div class="row">
             <div class="col">
@@ -41,32 +39,29 @@
                             <input type="hidden" name="eventId" value="@Model.EventInfoId"/>
 
 
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.Person!.PersonFirstName" class="col-sm-3 col-form-label">Eesnimi:</label>
                                 <div class="col-sm-9">
                                     <input asp-for="Participator.Person!.PersonFirstName" class="form-control">
                                     <span asp-validation-for="Participator.Person!.PersonFirstName" class="text-danger"></span>
                                 </div>
                             </div>
-                            <br/>
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.Person!.PersonLastName" class="col-sm-3 col-form-label">Perekonnanimi:</label>
                                 <div class="col-sm-9">
                                     <input asp-for="Participator.Person!.PersonLastName" class="form-control">
                                     <span asp-validation-for="Participator.Person!.PersonLastName" class="text-danger"></span>
                                 </div>
                             </div>
-                            <br/>
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.Person!.PersonIdCode" class="col-sm-3 col-form-label">ID kood:</label>
                                 <div class="col-sm-9">
                                     <input type="number" asp-for="Participator.Person!.PersonIdCode" class="form-control">
                                     <span asp-validation-for="Participator.Person!.PersonIdCode" class="text-danger"></span>
                                 </div>
                             </div>
-                            <br/>
 
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.PaymentType" class="col-sm-3 control-label">Maksmisviis:</label>
                                 <div class="col-sm-9">
 
@@ -75,11 +70,10 @@
                                 </div>
 
                             </div>
-                            <br/>
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.Person!.PersonDescription" class="col-sm-3 col-form-label">Lisainfo: </label>
                                 <div class="col-sm-9">
-                                    <textarea asp-for="Participator.Person!.PersonDescription" class="form-control" rows="3"></textarea>
+                                    <textarea style="resize: none" asp-for="Participator.Person!.PersonDescription" class="form-control" rows="3"></textarea>
                                     <span asp-validation-for="Participator.Person!.PersonDescription" class="text-danger"></span>
                                 </div>
                             </div>
@@ -106,32 +100,29 @@
                             <input type="hidden" asp-for="Participator.Id" class="form-control">
                             <input type="hidden" name="eventId" value="@Model.EventInfoId"/>
 
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.Company!.CompanyName" class="col-sm-3 col-form-label">Nimi:</label>
                                 <div class="col-sm-9">
                                     <input asp-for="Participator.Company!.CompanyName" class="form-control">
                                     <span asp-validation-for="Participator.Company!.CompanyName" class="text-danger"></span>
                                 </div>
                             </div>
-                            <br/>
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.Company!.CompanyRegistryCode" class="col-sm-3 col-form-label">Registrikood:</label>
                                 <div class="col-sm-9">
                                     <input type="number" asp-for="Participator.Company!.CompanyRegistryCode" class="form-control">
                                     <span asp-validation-for="Participator.Company!.CompanyRegistryCode" class="text-danger"></span>
                                 </div>
                             </div>
-                            <br/>
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.Company!.CompanyMemberCount" class="col-sm-3 col-form-label">Osavõtjate arv:</label>
                                 <div class="col-sm-9">
                                     <input type="number" asp-for="Participator.Company!.CompanyMemberCount" class="form-control">
                                     <span asp-validation-for="Participator.Company!.CompanyMemberCount" class="text-danger"></span>
                                 </div>
                             </div>
-                            <br/>
 
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.PaymentType" class="col-sm-3 control-label">Maksmisviis:</label>
                                 <div class="col-sm-9">
 
@@ -140,8 +131,7 @@
                                 </div>
 
                             </div>
-                            <br/>
-                            <div class="form-group row">
+                            <div class="form-group row mb-3">
                                 <label asp-for="Participator.Company!.CompanyDescription" class="col-sm-3 col-form-label">Lisainfo: </label>
                                 <div class="col-sm-9">
                                     <textarea asp-for="Participator.Company!.CompanyDescription" class="form-control" rows="3"></textarea>
